--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ nav ul li a:hover{
 .check-img{
     width: 450px;
     height: 300px;
+    transition: transform 0.4s ease;
+}
+.check-img:hover{
+    transform: scale(1.06);
 }
 .proposal{
     background-color: #e6ecfb;
@@ -196,10 +200,6 @@ nav ul li a:hover{
     flex-wrap: wrap;
     max-width: 1200px;
     margin: auto;
-    transition: transform 0.4s ease-in;
-}
-.team-container:hover{
-  transform:scale(1.05);
 }
 .team-member{
     text-align: center;
@@ -207,14 +207,13 @@ nav ul li a:hover{
     transition: transform 0.4s ease;
 }
 .team-member:hover{
-  transform: scale(1.05);
+    transform: scale(1.06);
 }
 .team-member img{
     width: 100%;
     height: auto;
     border-radius: 7px;
     margin-bottom: 20px;
-    transition: transform 0.4s ease-in;
 }
 .team-member h3{
     font-size: 20px;
@@ -231,9 +230,6 @@ nav ul li a:hover{
     text-decoration: none;
     font-weight: 500;
 }
-.team-member-img:hover{
-    transform: scale(1.03);
-  }
 .team-member a:hover{
     text-decoration: underline;
 }
@@ -261,7 +257,7 @@ nav ul li a:hover{
     height: auto;
     border-radius: 7px;
     box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
-    transition: transform 0.3s ease;
+    transition: transform 0.3s;
 }
 .team-preview-grid img:hover{
     transform: scale(1.06);
@@ -325,6 +321,10 @@ nav ul li a:hover{
     width: 100%;
     border-radius: 7px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.1) ;
+    transition: transform 0.4s ease;
+}
+.right-img img:hover{
+    transform: scale(1.06);
 }
 .reviews{
     background: #fff;
@@ -411,49 +411,65 @@ nav ul li a:hover{
     width: 100%;
     max-width: 500px;
     border-radius: 8px;
+    transition: transform 0.4s ease;
+}
+.cam-img img:hover{
+    transform: scale(1.06);
 }
 .footer{
-    background: #fff;
-    padding: 50px 9%;
     font-family: sans-serif;
-    color: #111;
+    color: #000;
+    background-color: #FAFAFA;
+    width: 100%;
+    padding: 40px 100px;
+    box-sizing: border-box;
 }
 .footer-top{
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
     gap: 50px;
+    align-items: flex-start;
     margin-bottom: 30px;
 }
 .footer-logo img{
-    max-width: 150px;
+    width: 180px;
 }
-.footer-col  h4{
-    font-size: 16px;
+
+.footer-col h3{
     margin-bottom: 10px;
+    font-size: 16px;
     font-weight: 500;
 }
+.small-title{
+    font-size: 12px;
+    color: #999;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+}
 .footer-col p{
+    margin: 0 0 10 0px;
     font-size: 14px;
     color: #444;
     margin: 5px 0;
 }
-.footer-col a{
-    color: #111;
-    text-decoration: none;
-}
-.footer-col a:hover{
-    text-decoration: underline;
-}
-.quote-btn{
-    border: 1px solid #111;
-    padding: 7px 20px;
+.footer button{
     background: transparent;
+    border: 1px solid#000;
+    padding: 8px 16px;
+    font-size: 14px;
     cursor: pointer;
-    margin-top: 12px;
+    margin-top: 10px;
 }
-.quote-btn:hover{
-    background-color:#E5E5E5 ;
+.footer button a{
+    text-decoration: none;
+    color: #000;
+    font-weight: 600;
+
+}  
+.footer button:hover{
+    background-color: #e5e5e5;
+    
 }
 .social-icons a{
     margin-right: 10px;
@@ -463,22 +479,277 @@ nav ul li a:hover{
 .social-icons a:hover{
     color: #007bff;
 }
+hr{
+    border: none;
+    border-top: 1px solid #001f87;
+    margin: 20px 0;
+}
 .footer-bottom{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin-top: 20px;
 }
-.footer-bottom h5{
-    font-size: 15px;
-    text-transform: uppercase;
-    color: #777;
-    margin-bottom: 5px;
+.address{
+    width: 30%;
 }
-.footer-bottom p{
-    font-size: 12px;
-    color: #333;
-    font-weight: 400;
-    line-height: 1.5;
+.address-detail{
+    font-size: 14px;
+    margin: 4px 0;
+}
+@media (max-width:768px){
+    header{
+        justify-content: space-between;
+    
+        padding: 10px;
+    }
+    .header-logo img{
+        height: 45px;
+        margin-left: 15px;
+    }
+    header nav ul{
+        gap: 15px;
+        font-size: 13px;
+        position: relative;        
+        margin-left: 10px;
+        text-align: center;
+    }
+    header i{
+        position: relative;
+        margin-right: 10px;
+        font-size: 10px;
+        
+    }
+    .hero{
+        padding: 35px;
+    }
+    .hero-text h3{
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+    .hero-text h1{
+        font-size: 30px;
+        line-height: 1.2;
+        margin-bottom: 20px;
+    }
+    .buttons{
+        gap: 10px;
+    }
+    .btn{
+        padding: 6px 12px;
+        border-radius: 8px;
+        font-size: 10px;
+    }
+    .bg-section{
+        height: 600px;
+        background-position: left;
+    }
+    .sponsor-txt{
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .sponsor{
+        height: 70px;
+        gap: 15px; 
+        justify-content: left;     
+        display: flex;
+        justify-content: center;
+        
+        margin-top: 25px;
+       
+    }
+    .body p{
+        font-size: 10px;
+        margin-bottom: 10px;
+    }
+    .body h2{
+        font-size: 35px;
+        margin-bottom: 10px;
+
+    }
+    .txt-btn{
+        padding: 5px 12px;
+        font-size: 12px;
+        line-height: 1.2;
+        margin-top: 10px;
+    }
+    .body{
+        flex-direction: column;
+        position: relative;
+        left: 40px;
+    }
+    .check-img{
+        width:350px;
+        height: 200px;
+        object-fit: cover;
+    }
+    .proposal{
+        width: 100%;
+        height: 70px;
+        gap: 0px;
+        margin-top: 20px;
+    }
+    .proposal .need{
+        position: relative;
+        margin-right: 150px;
+    }
+    .proposal h2{
+        font-size: 15px;
+    }
+    .proposal p{
+        font-size: 10px;
+        margin-top: 10px;
+    }
+    .proposal .book-btn{
+        padding: 8px 16px;
+        font-size: 10px;
+    }
+    .mid-txt{
+        font-size: 15px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .team-container{
+        gap: 20px;
+        max-width: 1000px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .team-member img{
+        width: 80%;
+        border-radius: 8px;
+        margin-bottom: 10px;
+    }
+    .team-member h3{
+        font-size: 14px;
+    }
+    .team-member p{
+        font-size: 10px;
+    }
+    .team-preview-container{
+        max-width: 1000px;
+        gap: 15px;
+        flex-direction: column;
+    }
+    .team-btn .meet-btn{
+        padding: 8px 16px;
+        font-size: 12px;
+        margin-top: 15px;
+
+    }
+    .dm-container{
+        max-width: 1000px;
+        gap: 20px;
+        flex-direction: column;
+    }
+    .sub-heading{
+        font-size: 10px;
+        letter-spacing: 1.5;
+        margin-bottom: 10px;
+
+    }
+    .dm-txt h2{
+        font-size: 25px;
+        line-height: 1.2;
+        font-weight: 600;
+        margin-bottom: 10px;
+
+    }
+    .description{
+        font-size: 10px;
+        font-weight: 450;
+        line-height: 1.3;
+    }
+    .right-img{
+        width: 60%;
+        height: 300px;
+        margin-top: 20px;
+        background-position: center;
+    }
+    .dm-txt{
+        position: relative;
+        left: 10px;
+        
+    }
+    .reviews-title{
+        font-size: 25px;
+        margin-top: 15px;
+        letter-spacing: 0.8;
+    }
+    .quote{
+        font-size: 10px;
+        
+    }
+    .quote span{
+        font-size: 8px;
+    }
+    .reviews{
+        padding: 60px 20px;
+    }
+    .reviews-container{
+        flex-direction: column;
+    }
+    .campaigns{
+        padding: 40px 20px;
+    }
+    .campaigns-container{
+        max-width: 1000px;
+        gap: 20px;
+        flex-direction: column;
+    }
+    .campaigns-text .subtitle{
+        font-size: 8px;
+        initial-letter: 0.6;
+        margin-bottom: 10px;
+    }
+    .campaigns-text h2{
+        font-size: 25px;
+        line-height: 1.2;
+        margin-bottom: 15px;
+
+    }
+    .campaigns-text .description{
+        font-size: 10px;
+        line-height: 1.2;
+        margin-top: 5px;
+    }
+    .cam-img img{
+        width: 80%;
+        max-width: 350px;
+    }
+    .footer-top{
+        gap: 25px;
+        margin-bottom: 20px;
+    }
+    .footer-logo img{
+        width: 100px;
+    }
+    .footer-col h3{
+        font-size: 10px;
+
+    }
+    .footer button{
+        padding: 6px 12px;
+        font-size: 8px;
+    }
+    .footer-col p{
+        font-size: 10px;
+    }
+    .social-icons a i{
+        font-size: 12px;
+        margin-top: 7px;
+    }
+    .addres{
+        width: 20%;
+    }
+    .small-title{
+        font-size: 8px;
+        letter-spacing: 0.6;
+        
+    }
+    .address-detail{
+        font-size: 10px;
+    }
+   
 }
